--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,8 @@ dependencies {
     // Glide - Image loading library
     implementation "com.github.bumptech.glide:glide:4.8.0"
 
+    // Material view
+    implementation 'com.google.android.material:material:1.2.1'
+
 
 }
