--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,18 @@ buildscript {
         jcenter()
     }
     dependencies {
+        def nav_version = "2.3.0"
+
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 
     ext {
-        version_navigation = '1.0.0'
+        nav_version = "2.3.0"
         version_moshi = '2.9.0'
         room_version = "2.2.5"
     }
