--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".firstRun.FirstRunActivity" />
-        <activity android:name=".exerciseselectionfragmentsactivity.MainActivity" />
+        <activity android:name=".exerciseselectionfragmentsactivity.MainActivity"
+            android:parentActivityName=".dashboard.DashboardActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
